# DocuChat

./: .gitignore  LICENSE  run.sh
.github/workflows/: backend-ci.yml  frontend-ci.yml
Backend/: .env.example  .gitignore  README.md  pyproject.toml
Backend/app/: main.py
Backend/app/api/: deps.py
Backend/app/api/routes/: chats.py  health.py  uploads.py
Backend/app/constants/: uploads.py
Backend/app/core/: config.py  logging.py
Backend/app/db/: session.py
Backend/app/models/: __init__.py  chat_session.py  document.py
Backend/app/services/: chat_manager.py  document_manager.py
Backend/scripts/: generate_requirements_file.sh
Frontend/: .gitignore  .prettierignore  .prettierrc.json  eslint.config.js  example.env  index.html  package-lock.json  package.json  vite.config.ts
Frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
Frontend/src/components/: UploadZone.tsx
Frontend/src/constants/: upload.ts
Frontend/src/lib/: axios.ts
Frontend/src/pages/Home/: Home.css  Home.tsx
Frontend/src/pages/dashboard/: ChatPane.tsx  Dashboard.tsx  NewChat.tsx  Sidebar.tsx  SourcesPane.tsx
Frontend/src/services/: chatService.ts
Frontend/src/store/: authStore.ts  uiStore.ts
Frontend/src/types/: upload.ts
